applying correct order to the sca_type groupby